--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -114,13 +114,13 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/users/import/profiles" class="nav-link">
+                                    <a href="/users/import/hourly" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Почасови</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="/users/import/STP/Readings" class="nav-link">
+                                    <a href="/users/import/invoicing" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Фактуриране</p>
                                     </a>
