--- a/views/graphs-menu/stp-graph-readings.ejs
+++ b/views/graphs-menu/stp-graph-readings.ejs
@@ -76,13 +76,13 @@
     </div>
     <table id="stp-graph-readings-table" class="display">
         <thead>
-            <tr>
+            <tr> 
                 <th>ID на график</th>
                 <th>Идентификационен код на клиент</th>
                 <th>Име на клиент</th>
                 <th>Дата на график</th>
                 <th>ЕРП</th>
-                <th>Товар</th>
+                <th>Общ Товар</th>
             </tr>
         </thead>
         <tbody id="tBody">
