--- a/views/readings-menu/list-readings-stp.ejs
+++ b/views/readings-menu/list-readings-stp.ejs
@@ -29,9 +29,8 @@
     <link rel="stylesheet" href="../../../../css/clients-info.css">
     <title>Document</title>
 </head>
-
 <body>
-    <h1 class="text-center">Мерения по часове за id:</h1>
+    <h2 class="text-center">Почасово стп мерене за дата:</h2>
     <label class="switch">
         <input class="switch-input" type="checkbox" checked />
         <span class="switch-label" data-on="Календар" data-off="Графики"></span>
