--- a/views/graphs-menu/graphs-stp-hour-prediction-daily.ejs
+++ b/views/graphs-menu/graphs-stp-hour-prediction-daily.ejs
@@ -25,14 +25,14 @@
     <script src='../../../../../AdminLTE-master/plugins/fullcalendar-daygrid/main.js'></script>
     <script src="../../../../../../AdminLTE-master/plugins/fullcalendar-timegrid/main.js"></script>
     <link rel="stylesheet" href="../../../../../AdminLTE-master/css/custom-calendar.css">
-    <link rel="stylesheet" href="../../../../css/hour-readings-daily.css">
+    <link rel="stylesheet" href="../../../../css/stp-hour-readings-monthly.css">
     <link rel="stylesheet" href="../../../../css/clients-info.css">
     <title>Document</title>
 </head>
 
 <body>
     <h2 class="text-center">График</h2>
-    <label class="switch">
+    <label class="switch red-border">
         <input class="switch-input" type="checkbox" checked />
         <span class="switch-label" data-on="Календар" data-off="Графики"></span>
         <span class="switch-handle"></span>
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="row chart-daily">
-        <label class="switch ml-3">
+        <label class="switch ml-3 red-border">
             <input class="switch-input" type="checkbox" checked />
             <span class="switch-label" data-on="Линия" data-off="Бар"></span>
             <span class="switch-handle"></span>
