--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -245,10 +245,22 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="nav-item"> <a href="/users/inquiry" class="nav-link">
+                    <li class="nav-item has-treeview">
+                        <a href="#" class="nav-link">
                             <i class="fas fa-file-export"></i>
-                            <p class="ml-2">Справка</p>
+                            <p>
+                                Справка
+                                <i class="fas fa-angle-left right"></i>
+                            </p>
                         </a>
+                        <ul class="nav nav-treeview">
+                            <li class="nav-item">
+                                <a id="invoicing-readings-href" href="/users/inquiry/imbalances" class="nav-link">
+                                    <i class="fas fa-file-export"></i>
+                                    <p>Небаланси</p>
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                     </ul>
                 </nav>
