--- a/views/hour-readings/hour-readings-daily.ejs
+++ b/views/hour-readings/hour-readings-daily.ejs
@@ -32,7 +32,7 @@
 
 <body>
     <h2 class="text-center">Почасово мерене за дата:</h2>
-    <label class="switch">
+    <label class="switch red-border">
         <input class="switch-input" type="checkbox" checked />
         <span class="switch-label" data-on="Календар" data-off="Графики"></span>
         <span class="switch-handle"></span>
@@ -49,7 +49,7 @@
         </div> -->
     </div>
     <div class="row chart-daily">
-        <label class="switch ml-3">
+        <label class="switch ml-3 red-border">
             <input class="switch-input" type="checkbox" checked />
             <span class="switch-label" data-on="Линия" data-off="Бар"></span>
             <span class="switch-handle"></span>
