--- a/views/readings-menu/list-readings-stp.ejs
+++ b/views/readings-menu/list-readings-stp.ejs
@@ -27,11 +27,12 @@
     <link rel="stylesheet" href="../../../../../AdminLTE-master/css/custom-calendar.css">
     <link rel="stylesheet" href="../../../../css/hour-readings-daily.css">
     <link rel="stylesheet" href="../../../../css/clients-info.css">
+    <link rel="stylesheet" href="../../../../css/btn-hover-effects.css">
     <title>Document</title>
 </head>
 <body>
     <h2 class="text-center">Почасово стп мерене за дата:</h2>
-    <label class="switch">
+    <label class="switch red-border">
         <input class="switch-input" type="checkbox" checked />
         <span class="switch-label" data-on="Календар" data-off="Графики"></span>
         <span class="switch-handle"></span>
@@ -48,7 +49,7 @@
         </div> -->
     </div>
     <div class="row chart-daily">
-        <label class="switch ml-3">
+        <label class="switch ml-3 red-border">
             <input class="switch-input" type="checkbox" checked />
             <span class="switch-label" data-on="Линия" data-off="Бар"></span>
             <span class="switch-handle"></span>
