--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -255,7 +255,7 @@
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
-                                <a id="invoicing-readings-href" href="/users/inquiry/imbalances" class="nav-link">
+                                <a id="inquiry-imbalances-href" href="/users/inquiry/imbalances" class="nav-link">
                                     <i class="fas fa-file-export"></i>
                                     <p>Небаланси</p>
                                 </a>
