--- a/views/invoicing/list-readings-stp.ejs
+++ b/views/invoicing/list-readings-stp.ejs
@@ -80,8 +80,8 @@
         </tbody>
 
     </table>
-
-    <script src="../js/STP listing/list-readings.js"></script>
+ 
+    <script src="../js/invoicing/list-readings.js"></script>
 </body>
 
 </html>
