--- a/views/readings-menu/hour-readings-daily.ejs
+++ b/views/readings-menu/hour-readings-daily.ejs
@@ -27,12 +27,11 @@
     <link rel="stylesheet" href="../../../../../AdminLTE-master/css/custom-calendar.css">
     <link rel="stylesheet" href="../../../../css/hour-readings-daily.css">
     <link rel="stylesheet" href="../../../../css/clients-info.css">
-    <link rel="stylesheet" href="../../../../css/btn-hover-effects.css">
     <title>Document</title>
 </head>
 
 <body>
-    <h2 class="text-center">Почасово стп мерене за дата:</h2>
+    <h2 class="text-center">Почасово мерене за дата:</h2>
     <label class="switch red-border">
         <input class="switch-input" type="checkbox" checked />
         <span class="switch-label" data-on="Календар" data-off="Графики"></span>
@@ -41,7 +40,7 @@
     <div class="row calendar-daily">
         <div id="calendar">
         </div>
-        <!-- <div id="legend" class="col-md-2">
+        <!--  <div id="legend" class="col-md-2">
             <h2 class="text-center mb-3"><i class="fas fa-tags"></i>Легенда</h2>
             <ul>
                 <li class="text-primary mb-3">Синъо: Настоящи мерения</li>
@@ -57,7 +56,7 @@
         </label>
         <canvas id="daily-hour-readings-chart" class="mb-5" width="1200" height="500"></canvas>
     </div>
-    <script src="../../../../js/readings-menu/stp-hour-readings-daily.js">
+    <script src="../../../../js/hour-readings/hour-readings-daily.js">
     </script>
 </body>
 
