--- a/public/css/clients-info.css
+++ b/public/css/clients-info.css
@@ -104,11 +104,24 @@ input:not([type='date']):not([type='search']):not([type='checkbox'])::-webkit-ca
     display: none;
 }
 
+.nav-tabs .nav-link {
+    color: black;
+}
+
 ul.nav-tabs a.nav-link {
     color: #482ff7 !important;
 }
 
+.nav-tabs .nav-link:hover {
+    border: 1px solid blueviolet;
+}
 
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+    color: black;
+}
+ 
+ 
 .fc-content .fc-time {
     display: none !important;
 }
