--- a/public/css/inquiry-imbalances.css
+++ b/public/css/inquiry-imbalances.css
@@ -1,3 +1,22 @@
+.nav-tabs .nav-link {
+    border: 1px solid lightblue;
+    color: black;
+    width: 200%;
+}
+
+.nav-tabs .nav-link:hover {
+    border: 1px solid blueviolet;
+}
+
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+    color: black;
+}
+
+ul.nav-tabs a.nav-link {
+    color: #482ff7 !important;
+}
+
 #export-imbalances {
     display: none
 }
