--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="../../../../css/bootstrap.css">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
     <link rel="stylesheet" href="../../../../AdminLTE-master/plugins/fontawesome-free/css/all.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -255,8 +254,20 @@
                         </a>
                         <ul class="nav nav-treeview">
                             <li class="nav-item">
+                                <a id="inquiry-readings-href" href="/users/inquiry/readings" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Мерене</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a id="inquiry-graphs-href" href="/users/inquiry/graphs" class="nav-link">
+                                    <i class="far fa-circle nav-icon"></i>
+                                    <p>Графици</p>
+                                </a>
+                            </li>
+                            <li class="nav-item">
                                 <a id="inquiry-imbalances-href" href="/users/inquiry/imbalances" class="nav-link">
-                                    <i class="fas fa-file-export"></i>
+                                    <i class="far fa-circle nav-icon"></i>
                                     <p>Небаланси</p>
                                 </a>
                             </li>
