--- a/views/exports/inquiry-graphs.ejs
+++ b/views/exports/inquiry-graphs.ejs
@@ -31,7 +31,7 @@
     <script src="../../../js/datatables/datatables.js"></script>
     <link rel="stylesheet" href="../../../css/checkboxes.css">
     <link rel="stylesheet" href="../../../css/radio-btns.css">
-    <link rel="stylesheet" href="../../../css/inquiry-imbalances.css">
+    <link rel="stylesheet" href="../../../css/inquiry-graphs.css">
     <title>Document</title>
 </head>
 
@@ -46,7 +46,7 @@
         <div id="info" class="tab-pane fade">
             <div class="card card-default">
                 <div class="card-header">
-                    <h2 class="text-center">Небаланси</h2>
+                    <h2 class="text-center">Графици</h2>
                 </div>
                 <div class="card-body">
                     <form action="" method="GET">
@@ -58,15 +58,15 @@
                                     type="search"></input>
                             </div>
                             <div><span class="text-heading">Име на клиент</span> <input id="nameOfClient"
-                                    list="stp-hour-readings-clients" name="name" autocomplete="off" class="ml-2"
+                                    list="stp-hour-predictions-clients" name="name" autocomplete="off" class="ml-2"
                                     type="search"></input>
-                                <datalist id="stp-hour-readings-clients">
+                                <datalist id="stp-hour-predictions-clients">
                                 </datalist>
                             </div>
                         </div>
                         <div class="row my-3 justify-content-around">
                             <div class="mt-3 text-heading mr-2"> Идентификационен код <input id="clientID"
-                                    name="clientID" autocomplete="off" list="idList" type="search"></input>
+                                    name="clientID" class="ml-3" autocomplete="off" list="idList" type="search"></input>
                                 <datalist id="idList">
                                 </datalist>
                             </div>
@@ -84,19 +84,27 @@
                                 <span>ЕнергоПРО</span>
                             </label>
                         </div>
-                        <div class="row justify-content-center">
-                            <label class="radio mr-5  col-md-3">СТП Тип
-                                <input type="radio" id="stp_imbalances" checked value="stp_imbalances"
-                                    name="imbalances">
+                        <div class="row justify-content-around">
+                            <span class="mt-3 text-heading">Вид Мерене:</span>
+                            <label class="radio mr-5">СТП
+                                <input type="radio" id="profile_coef" value="profile_coef" name="predictions">
                                 <span class="checkmark"></span>
                             </label>
-                            <label class="radio col-md-4">Почасови Тип
-                                <input type="radio" id="hourly_imbalances" value="hourly_imbalances" name="imbalances">
+                            <label class="radio">Почасови
+                                <input type="radio" id="hour_prediction" value="hour_prediction" name="predictions">
                                 <span class="checkmark"></span>
                             </label>
-                            <div class="col-md-4">
-                                <button type="submit" class="btn-primary btn-lg ml-3 mt-3">Търсене</button>
+                            <div class="mt-3 text-heading" aria-haspopup="true" aria-expanded="true"
+                                data-toggle="tooltip" data-placement="bottom" container="body"
+                                title="Избиране на име на профил за СТП">
+                                Име на профил<input id="profile_name" class="ml-3" name="profile_name"
+                                    autocomplete="off" list="profile_names" type="search"></input>
+                                <datalist id="profile_names">
+                                </datalist>
                             </div>
+                        </div>
+                        <div class="row justify-content-center">
+                            <button type="submit" class="btn-primary btn-lg ml-3 mt-3">Търсене</button>
                         </div>
                 </div>
                 </form>
@@ -105,7 +113,7 @@
                 <div class="row">
                     <div class="offset-md-2">
                         <label class="switch red-border">
-                            <input class="switch-input" id="switch-calendar-graph" type="checkbox" checked />
+                            <input class="switch-input" id="switch-calendar-predictions" type="checkbox" checked />
                             <span class="switch-label" data-on="Календар" data-off="Графики"></span>
                             <span class="switch-handle"></span>
                         </label>
@@ -118,24 +126,10 @@
                         </label>
                     </div>
                 </div>
-                <div id="calendar-imbalance" class="col-md-12">
+                <div id="calendar-predictions" class="col-md-12">
                 </div>
-                <div class="imbalance-graph-div">
-                    <!--  <form action="submit">
-                <!-- <div class="row">
-                    <!--  <div class="offset-1 col-md-3">
-                        <input type="date" name="fromDateImbalanceGraph" />От дата
-                    </div>
-                    <div class="col-md-3">
-                        <input type="date" name="toDateImbalanceGraph" />До дата
-                    </div>
-
-                    <div class="col-md-2">
-                        <button type="submit" id="searchBtnGraphImbalance" class="btn-lg btn-primary">Търси</button>
-                    </div>                   
-                </div>  
-            </form>-->
-                    <canvas id="imbalance-chart" class="mb-5" width="1100" height="500"></canvas>
+                <div class="readings-prediction-div">
+                    <canvas id="predictions-chart" class="mb-5" width="1100" height="500"></canvas>
                 </div>
             </div>
         </div>
@@ -145,26 +139,25 @@
             <div class="row justify-content-around">
                 <div>
                     <span class="mr-5">Име на файл</span><input id="table-input" class="text-center" type="text"
-                        placeholder="excel-imbalances" />
+                        placeholder="excel-predictions" />
                 </div>
                 <div>
                     <button id="export-table-btn" class="btn btn-success btn-lg">Свали екселска таблица</button>
                 </div>
             </div>
 
-            <table id="export-imbalances">
+            <table id="export-predictions">
                 <th>ID</th>
-                <th>Сума на небаланс</th>
+                <th>Име на клиент</th>
                 <th>Дата от</th>
                 <th>Дата до</th>
-                <tbody id="tBody-imbalances">
+                <tbody id="tBody-predictions">
 
                 </tbody>
             </table>
         </div>
-
     </div>
-    <script src="../../../../js/exports/inquiry-imbalances.js"></script>
+    <script src="../../../../js/exports/inquiry-graphs.js"></script>
     <script src="../../../../js/exportFunctions/exportTable.js"></script>
 </body>
 
