--- a/views/invoicing/list-readings-stp.ejs
+++ b/views/invoicing/list-readings-stp.ejs
@@ -60,19 +60,26 @@
             </form>
         </div>
     </div>
+    <div class="row justify-content-around mb-3">
+        <button class="btn-primary btn-lg">Селектиране на всички колони</button>
+        <button class="btn-success btn-lg">Преглед</button>
+        <button class="btn-warning btn-lg">Фактуриране</button>
+        <button class="btn-danger btn-lg">Селектиране на всички редове</button>
+    </div>
     <table id="list-readings" class="display">
         <thead>
             <tr>
-                <th>ID на отчет</th>
-                <th>Клиентски номер</th>
-                <th>Идентификационен код</th>
-                <th>Име на клиент</th>
-                <th>Период на отчетност от</th>
-                <th>Период на отчетност до</th>
-                <th>Часова зона</th>
-                <th>Стойност в лв.</th>
-                <th>Тип на документа</th>
-                <th>ЕРП</th>
+                <th><input type="checkbox"> ID на отчет</th>
+                <th><input type="checkbox">Клиентски номер</th>
+                <th><input type="checkbox">Идентификационен код</th>
+                <th><input type="checkbox">Име на клиент</th>
+                <th><input type="checkbox">Период на отчетност от</th>
+                <th><input type="checkbox">Период на отчетност до</th>
+                <th><input type="checkbox">Часова зона</th>
+                <th><input type="checkbox">Количество</th>
+                <th><input type="checkbox">Стойност в лв.</th>
+                <th><input type="checkbox">Тип на документа</th>
+                <th><input type="checkbox">ЕРП</th>
                 <th>Детайли</th>
             </tr>
         </thead>
@@ -80,7 +87,7 @@
         </tbody>
 
     </table>
- 
+
     <script src="../js/invoicing/list-readings.js"></script>
 </body>
 
