--- a/public/css/inquiry-readings.css
+++ b/public/css/inquiry-readings.css
@@ -22,7 +22,8 @@ ul.nav-tabs a.nav-link {
 }
 
 input:hover {
-    border: 2px solid red;
+    border: 2px solid #ff304f;
+    transition: border 0.6s ease, -webkit-transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 2);
 }
 
 .fc-time-grid-event .fc-time,
