--- a/public/css/inquiry-imbalances.css
+++ b/public/css/inquiry-imbalances.css
@@ -2,10 +2,14 @@
     border: 1px solid lightblue;
     color: black;
     width: 200%;
+    transition: 0.5s;
+    transition-timing-function: ease-in-out;
 }
 
 .nav-tabs .nav-link:hover {
-    border: 1px solid blueviolet;
+    color:white !important;
+    border: 1px solid #3d5af1;
+    background-color: #9c1de7
 }
 
 .nav-tabs .nav-item.show .nav-link,
@@ -14,7 +18,7 @@
 }
 
 ul.nav-tabs a.nav-link {
-    color: #482ff7 !important;
+    color: black !important;
 }
 
 #export-imbalances {
