--- a/views/invoicing/list-readings-stp.ejs
+++ b/views/invoicing/list-readings-stp.ejs
@@ -12,6 +12,7 @@
     <script src="../../../js/datatables/datatables.js"></script>
     <link rel="stylesheet" href="../../css/checkboxes.css">
     <link rel="stylesheet" href="../../css/inquiry-readings-stp.css">
+    
 </head>
 
 <body>
@@ -60,12 +61,12 @@
         </div>
     </div>
     <div class="row justify-content-around mb-3">
-        <button class="btn-primary btn-lg">Селектиране на всички колони</button>
+        <button id="select-cols" class="btn-primary btn-lg">Селектиране на всички колони</button>
         <button id="preview-readings" class="btn-success btn-lg">
             Преглед
         </button>
         <button class="btn-warning btn-lg">Фактуриране</button>
-        <button class="btn-danger btn-lg">Селектиране на всички редове</button>
+        <button id="select-rows" class="btn-primary btn-lg">Селектиране на всички редове</button>
     </div>
     <table id="list-readings" class="display">
         <thead>
