--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -51,7 +51,7 @@
                     <!-- Left navbar links -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" data-widget="pushmenu" href="#"><i id="hmg-icon" class="fas fa-bars"></i></a>
+                            <a class="nav-link" data-widget="pushmenu" href="#"><i id="hmg-icon" class="fas fa-times"></i></a>
                         </li>
                         <li class="nav-item d-none d-sm-inline-block">
                             <a href="/dashboard" class="nav-link">Home</a>
